Bug 419554 - Balance of budget is shown incorrect
Summary: Balance of budget is shown incorrect
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 391980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-02 16:46 UTC by Thomas Baumgart
Modified: 2020-12-05 09:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2020-04-02 16:46:42 UTC
SUMMARY
The total of a budget is displayed incorrectly.

This was reported in https://forum.kde.org/viewtopic.php?f=69&t=165245.
Comment 1 Thomas Baumgart 2020-04-02 17:19:48 UTC
Git commit 8b8d82b608372512c89eeed004580d7562c9b49b by Thomas Baumgart.
Committed on 02/04/2020 at 17:19.
Pushed by tbaumgart into branch '5.0'.

Fix budget total display

The budget total was displayed incorrectly. This change corrects this.
FIXED-IN: 5.0.9

M  +37   -27   kmymoney/widgets/budgetviewproxymodel.cpp

https://commits.kde.org/kmymoney/8b8d82b608372512c89eeed004580d7562c9b49b
Comment 2 Thomas Baumgart 2020-12-05 09:41:59 UTC
*** Bug 391980 has been marked as a duplicate of this bug. ***