Fix budget total display

The budget total was displayed incorrectly. This change corrects this.

BUG: 419554
FIXED-IN: 5.0.9